# algoritmos-estructura-I-unrc

001 - Java/algoritmos-sencillos/: Greeting.java  HelloWorld.java
001-repaso-java/001-algoritmos-sencillos/: Suma.java
001-repaso-java/002-mediciones-temperaturas/: MedicionesTemperaturas.java
001-repaso-java/003-array-utils/: ArrayUtils.java
001-repaso-java/_003_array_utils/: ArrayUtils.java
003-funcional/: _009_producto_escalar.hs  _011_lista_suma.hs  _016_zero.hs  _020_lenght.hs  _021_cuadrado.hs
004-Introducción-Haskell/: _008_ghci_consola.txt  _010_valor_abs.hs  _013_potencias.hs  _015_suma.hs  _017_factorial.hs  _018_belongs.hs  _019_fibonacci.hs  _022_linf.hs  _023_f.hs  _024_square.hs
006-Funciones-Haskell/: 001_listas.hs  002_reverse.hs  003_listas_iguales.hs  004_palindromo.hs  005_primos.hs  006_listaPrimos.hs  007_listaConPrimos.hs  008_cortar.hs  009_digitos.hs  011_listaInfinita1.hs  012_listaInfNat.hs  013_014_listaInfNat.hs  015_cuad.hs  016_div.hs  017_natPrimos.hs  018_sumaCuad.hs  019_listaSucc.hs  020_listaSum.hs  021_foldFactorial.hs  022_foldAnd.hs  023_foldTam.hs  024_listaZ.hs  025_listaCuad.hs  026_lista10.hs  027_listaDiv.hs  028_todosOcurren.hs
007-Sopa-de-letras-Haskell/: SOPADELETRARDAS.hs  main.hs  sopa.cabal  test.hs
007-Sopa-de-letras-Haskell/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
007-Sopa-de-letras-Haskell/dist-newstyle/packagedb/ghc-9.6.7/: package.cache  sopa-de-letras-0.1.0.0-inplace.conf
010-Recuperando-2do-Parcial/: main.hs  main2.hs
(+143 files in other folders)
