cabal-version:      2.4
name:               sopa-de-letras
version:            0.1.0.0

library
    build-depends:    base >= 4.7 && < 5
    exposed-modules:  SopaDeLetras
    hs-source-dirs:   .
    default-language: Haskell2010

test-suite tests
    type:             exitcode-stdio-1.0
    main-is:          test.hs
    build-depends:
        base >= 4.7 && < 5,
        HUnit,
        sopa-de-letras
    
    hs-source-dirs:   .
    default-language: Haskell2010